<resources>
    <string name="app_name">Booklet</string>
    <string name="field_login">login</string>
    <string name="field_password">password</string>
    <string name="button_vk">VK page</string>
    <string name="url_recover_password" translatable="false">https://oauth20.mos.ru/selfservice/registration/openrecoverpassword.do</string>
    <string name="url_regulations" translatable="false">https://docs.google.com/document/d/1BjSTb_bgwHermREHdZlcwTDf6WowADiHIrjcDSC24OI/edit</string>
    <string name="url_privacy_policy" translatable="false">https://docs.google.com/document/d/1Pt5dvKHB8404oGnpd8rVi7yVmsjM5P0hIPBV9FnrQuQ/edit</string>
    <string name="url_vk_page" translatable="false">https://vk.com/julista.mobile</string>
    <string name="button_login">sign in</string>
    <string name="schedule">Schedule</string>
    <string name="marks">Marks</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="loading_points" translatable="false">…</string>
    <string name="currentLesson">Current lesson</string>
    <string name="next_lesson">Next lesson</string>

    <string name="preference_login" translatable="false">login</string>
    <string name="preference_password" translatable="false">password</string>
    <string name="preference_secret" translatable="false">secret</string>
    <string name="preference_token_last_update" translatable="false">token_last_update</string>
    <string name="preference_pid" translatable="false">pid</string>
    <string name="preference_student_profile_id" translatable="false">student_profile_id</string>
    <string name="preference_student_profiles" translatable="false">student_profiles</string>
    <string name="preference_saturday_lessons" translatable="false">saturday_lessons</string>
    <string name="preference_dark_theme" translatable="false">dark_theme</string>
    <string name="preference_is_showed_dark_theme_popup" translatable="false">dark_theme_popup</string>
    <string name="preference_mark_purpose" translatable="false">mark_purpose</string>
    <string name="preference_notification_new_mark" translatable="false">notification_new_mark</string>
    <string name="preference_notification_news" translatable="false">notification_news</string>
    <string name="preference_notification_main" translatable="false">preference_notification_main</string>
    <string name="preference_filter_grade" translatable="false">preference_filter_grade</string>
    <string name="preference_filter_new_marks" translatable="false">preference_filter_new_marks</string>
    <string name="preference_filter_tests" translatable="false">preference_filter_tests</string>
    <string name="preference_filter_holidays" translatable="false">preference_filter_holidays</string>
    <string name="preference_bot_code" translatable="false">bot_code</string>
    <string name="preference_invite_code" translatable="false">invite_code</string>
    <string name="preference_invitations" translatable="false">invitations</string>
    <string name="preference_bought_notifications" translatable="false">bought_notifications</string>
    <string name="plus">Plus</string>
    <string name="license_key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAyUYPCLYEi+UdAFIIMOaBCO31QWc1i6434TrHZmID/UMWIfFF/C0h+d8mYw4xwbtIJRQ+TWMULN//oAluY8fd3UALKiVY6FvG2aFYWY3BR/IFdx64STsyV76jWJqlWyknvIXn/U/UDVUY5iKGunaKjWkyEj581VKhFjnxITLgEFCXfYHPzw3xCyLbXAWQv6cQ5gcs0mbRYOK2qT9t+9dcqFQpALRSlJ1kux8HPjYCyDg21ewnwEqzFcOPp61gBrWUS/f56KYmtOw0rLRko2/wAkplSOgb7qRz+fV83O7cbM384kzaOrJ0wC24YBG1VNBTG+/VDGPI9kd0KBemHZFcDQIDAQAB</string>
    <string name="gratitude">Нам очень приятно, что вы доверяете нам. Эти деньги пойдут на развитие Julista. Теперь вам доступен весь набор уведомлений, ура! Уведомления можно включить в настройках. Надеемся, что вы останетесь довольны.</string>
    <string name="plus_activated">Activated</string>
    <string name="invite_code_description">Введите код приглашения, при его наличии, или оставьте поле пустым</string>
    <string name="invite_code">invite code</string>

    <string-array name="list_preference_mark_purpose_values">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>