<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navSchedule"
        android:icon="@drawable/schedule_outline"
        android:title="@string/schedule" />
    <item
        android:id="@+id/navMarks"
        android:icon="@drawable/mark_outline"
        android:title="@string/marks" />
    <item
        android:id="@+id/navGamefication"
        android:icon="@drawable/gamepad_variant_outline"
        android:title="@string/plus" />
    <item
        android:id="@+id/navEvents"
        android:icon="@drawable/information_outline"
        android:title="@string/plus" />
    <item
        android:id="@+id/navAccount"
        android:icon="@drawable/account_outline"
        android:title="@string/profile" />
</menu>